[project]
name = "mario-rl-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "box2d-py>=2.3.8",
    "gymnasium>=1.2.1",
    "pygame>=2.6.1",
    "swig>=4.4.0",
    "markupsafe<3.0.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "psutil>=7.1.3",
    "pyglet>=2.1.10",
    "argparse>=1.4.0",
    "tqdm>=4.66.5",
    "tensorboardx>=2.6.4",
]

[project.optional-dependencies]
cpu = [
  "torch==2.9.0",
  "torchvision==0.24.0",
]
gpu = [
  "torch==2.9.0+cu130",
  "torchvision==0.24.0+cu130",
]

[tool.uv]
conflicts = [
    [
      { extra = "cpu" },
      { extra = "gpu" },
    ],
]

[tool.uv.sources]
torch = [
  { index = "torch-cpu", extra = "cpu" },
  { index = "torch-gpu", extra = "gpu" },
]
torchvision = [
  { index = "torch-cpu", extra = "cpu" },
  { index = "torch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cpu"

[[tool.uv.index]]
name = "torch-gpu"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu130"

