[project]
name = "rl-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "box2d-py>=2.3.8",
    "gymnasium>=1.2.1",
    "pygame>=2.6.1",
    "swig>=4.4.0",
    "markupsafe<3.0.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "psutil>=7.1.3",
    "pyglet>=2.1.10",
    "argparse>=1.4.0",
    "tqdm>=4.66.5",
    "tensorboardx>=2.6.4",
]

[project.optional-dependencies]
default = [
  "torch==2.9.0",
  "torchvision==0.24.0",
]
cuda = [
  "torch==2.9.0+cu130",
  "torchvision==0.24.0+cu130",
]

[tool.uv]
conflicts = [
    [
      { extra = "default" },
      { extra = "cuda" },
    ],
]

[tool.uv.sources]
torch = [
  { index = "default", extra = "default" },
  { index = "torch-cuda", extra = "cuda" },
]
torchvision = [
  { index = "default", extra = "default" },
  { index = "torch-cuda", extra = "cuda" },
]

[[tool.uv.index]]
name = "default"
url = "https://mirror.nju.edu.cn/pypi/web/simple"

[[tool.uv.index]]
name = "torch-cuda"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu130"